# legal-ko

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  _typos.toml
.agents/skills/legal-ko-precedent/: SKILL.md
.agents/skills/legal-ko-precedent/reference/: CASE_TYPES.md
.agents/skills/legal-ko-search/: SKILL.md
.agents/skills/legal-ko-search/reference/: TOPICS.md  TUI.md
.agents/skills/legal-ko-zmd/: SKILL.md
.agents/skills/legal-ko-zmd/reference/: INDEXING.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: bookmarks.rs  cache.rs  client.rs  config.rs  context.rs  crossref.rs  enrichment.rs  lib.rs  models.rs  native_indexer.rs  native_query.rs  parser.rs  person_index.rs  precedent_map.rs  preferences.rs  search.rs  tts.rs  zmd.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  hangul.rs  main.rs  parser.rs  theme.rs  typst_gen.rs
crates/tui/src/app/: filters.rs  mod.rs  navigation.rs  tts.rs
crates/tui/src/templates/: legal.typ
crates/tui/src/ui/: admrule_detail.rs  admrule_list.rs  help.rs  law_detail.rs  law_list.rs  mod.rs  ordinance_detail.rs  ordinance_list.rs  precedent_detail.rs  precedent_list.rs  styles.rs  zmd_search.rs
docs/rationale/: 0001_parallel_synthesis_evaluation.md  0002_tui_precedent_views.md  0003_native_zmd_indexer.md  0004_native_query.md
scripts/: changelog.sh  legal-ko-rio.sh  zmd-collections.sh
src/: app.rs  main.rs  preferences.rs  theme.rs
src/data/: client.rs  mod.rs  models.rs  parser.rs
src/ui/: help.rs  law_detail.rs  law_list.rs
