[workspace]
members = ["crates/core", "crates/tui", "crates/cli"]
resolver = "3"

[workspace.package]
version = "0.3.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
libc = "0.2.183"
meilisearch-sdk = "0.32.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
rodio = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2.2"
vibe-rust = { path = "../../voice/vibe-rust" }

[profile.release]
lto = true
strip = true
