[workspace]
members = ["crates/core", "crates/tui", "crates/cli"]
resolver = "3"

[workspace.package]
version = "0.5.3"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
indicatif = "0.18.4"
rayon = "1.12.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.0", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
libc = "0.2.185"
meilisearch-sdk = "0.32.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
rodio = "0.22.2"
rusqlite = { version = "0.39.0", features = ["bundled", "vtab"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-width = "0.2.2"
vibe-rust = { path = "../../voice/vibe-rust" }

[profile.release]
lto = true
strip = true
