[workspace]
members = ["crates/core", "crates/tui", "crates/cli"]
resolver = "3"

[workspace.package]
version = "0.6.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.102"
futures = "0.3.32"
indicatif = "0.18.4"
rayon = "1.12.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
libc = "0.2.185"
meilisearch-sdk = "0.33.0"
ratatui = "0.30.0"
reqwest = { version = "0.13.3", features = ["json"] }
rodio = "0.22.2"
rusqlite = { version = "0.39.0", features = ["bundled", "vtab"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
unicode-normalization = "0.1.25"
unicode-width = "0.2.2"
vibe-rust = { path = "../../voice/vibe-rust" }

# PDF (Typst-based generation)
typst = "0.14.2"
typst-as-lib = { version = "0.15.4", features = ["typst-kit-fonts", "typst-kit-embed-fonts"] }
typst-pdf = "0.14.2"

[profile.release]
lto = true
strip = true
