[package]
name = "legal-ko-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "legal-ko-cli"
path = "src/main.rs"

[features]
default = []
meilisearch = ["legal-ko-core/meilisearch"]
tts = ["legal-ko-core/tts"]

[dependencies]
legal-ko-core = { path = "../core" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
