[package]
name = "legal-ko-core"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
dirs.workspace = true
reqwest.workspace = true
rodio.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
vibe-rust.workspace = true
