[package]
name = "legal-ko-core"
version.workspace = true
edition.workspace = true

[features]
default = []
meilisearch = ["dep:meilisearch-sdk"]
tts = ["dep:rodio", "dep:libc", "dep:vibe-rust"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
meilisearch-sdk = { workspace = true, optional = true }
rodio = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
vibe-rust = { workspace = true, optional = true }
