[package]
name = "legal-ko-core"
version.workspace = true
edition.workspace = true

[features]
default = []
meilisearch = ["dep:meilisearch-sdk"]
tts = ["dep:rodio", "dep:libc", "dep:vibe-rust"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
dirs.workspace = true
futures.workspace = true
indicatif.workspace = true
# Direct dep so build.rs receives DEP_SQLITE3_INCLUDE for vendored sqlite-vec.
libsqlite3-sys = { version = "0.37.0", features = ["bundled"] }
rayon.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
meilisearch-sdk = { workspace = true, optional = true }
rodio = { workspace = true, optional = true }
libc = { workspace = true, optional = true }
vibe-rust = { workspace = true, optional = true }

[build-dependencies]
cc = "1.2"
