[package]
name = "legal-ko-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "legal-ko"
path = "src/main.rs"

[features]
default = []
meilisearch = ["legal-ko-core/meilisearch"]

[dependencies]
legal-ko-core = { path = "../core" }
anyhow.workspace = true
crossterm.workspace = true
dirs.workspace = true
libc.workspace = true
ratatui.workspace = true
rodio.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
