[package]
name = "legal-ko-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "legal-ko"
path = "src/main.rs"

[features]
default = ["pdf"]
pdf = ["dep:typst", "dep:typst-as-lib", "dep:typst-pdf"]
meilisearch = ["legal-ko-core/meilisearch"]
tts = ["legal-ko-core/tts", "dep:rodio", "dep:libc"]

[dependencies]
legal-ko-core = { path = "../core" }
anyhow.workspace = true
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
unicode-normalization.workspace = true
unicode-width.workspace = true
libc = { workspace = true, optional = true }
rodio = { workspace = true, optional = true }
typst = { workspace = true, optional = true }
typst-as-lib = { workspace = true, optional = true }
typst-pdf = { workspace = true, optional = true }
